# WCL-Reclear-Tracker

./: .env.example  .gitignore  OPEN_THIS_FOLDER_FIRST.txt  README.md  README.txt  START_HERE.py  START_WCL_RECLEAR_TRACKER.bat  bootstrap.py  cache_manager.py  comparison_db.py  comparison_guilds.csv  comparison_runner.py  config.json  diagnostics.py  discovery_test.py  exporter.py  gui_app.py  gui_data.py  guild_discovery.py  guild_fetcher.py  logger_utils.py  main.py  processor.py  pyproject.toml  query_schedule_cache.py  schedule_database.py  schedule_scan.py  self_check.py  settings_manager.py  updater.py  v2_report_tools.py  v2_setup.py  wcl_api.py  wowprogress_backup.py  wowprogress_test.py
.github/workflows/: release.yml
api/: wcl_api_v1.py  wcl_api_v2.py
