[project]
name = "wcl-reclear-tracker"
version = "1.7.1"
description = "Tracks Mythic progression vs reclear time from Warcraft Logs reports."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "openpyxl",
    "python-dotenv",
]

[tool.wcl-reclear-tracker]
target_python = "3.10+"
cache_schema_version = 1
settings_schema_version = 1
